Fix header dropdown and breadcrumbs truncation

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -36,12 +36,13 @@
   }
 
   &__account-selector {
-    display: flex;
+    min-width: 0;
   }
 
   &__left {
     display: flex;
     height: $header-total-height - $header-gradient-height;
+    min-width: 0;
     padding-left: 0 !important;
     margin-left: 0 !important;
     flex: 1;
@@ -53,6 +54,7 @@
 
   &__right {
     display: flex;
+    min-width: 0;
   }
 
   .global-account-selector {
@@ -60,8 +62,10 @@
 
     &__toggle {
       display: flex;
+      width: 100%;
       padding: 0 20px 0 30px;
       margin: 14.5px 20px 14.5px 0;
+      overflow: hidden;
       border-right: 1px solid $silver-80;
 
       .dropdown-toggle {
@@ -72,7 +76,7 @@
   }
 
   &__breadcrumb {
-    flex: 1;
+    overflow: hidden;
   }
 
   @include md {
